Adding page tambah proyek and connecting to database

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.jar=${dist.dir}/EstimatorId.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.18.jar=C:\\Users\\muham\\Downloads\\controlsfx-8.40.18.jar
+file.reference.fontawesomefx-8.9.jar=C:\\JLibrary\\fontawesomefx-8.9.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -37,7 +39,9 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.JFoenix.classpath}
+    ${libs.JFoenix.classpath}:\
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.controlsfx-8.40.18.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
